<resources>
    <string name="titulo">UTA</string>

    <!--Pantalla inicial-->
    <string name="botonuno">Crear una Cuenta</string>
    <string name="botondos">Iniciar Sesión</string>

    <!--Segunda Pantalla-->
    <string name="botontres">Email</string>
    <string name="botoncuatro">Contraseña</string>
    <string name="botoncinco">Iniciar Sesión</string>

    <!--Pantalla registro-->
    <string name="botonseis">Nombre</string>
    <string name="botonsiete">Email</string>
    <string name="botonocho">Contraseña</string>
    <string name="botonnueve">Registrarse</string>


</resources>
