<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            app:srcCompat="@drawable/registro" />


        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="54dp"
            android:layout_marginTop="310dp"
            android:hint="@string/botonseis"
            android:textColorHint="@color/coloruno"
            android:textSize="15sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="54dp"
            android:layout_marginTop="345dp"
            android:hint="@string/botonsiete"
            android:textColorHint="@color/coloruno"
            android:textSize="15sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="54dp"
            android:layout_marginTop="378dp"
            android:hint="@string/botonocho"
            android:textColorHint="@color/coloruno"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="70dp"
            android:layout_marginStart="135dp"
            android:background="flat"
            android:text="@string/botonnueve"
            android:textColor="@color/coloruno"
            android:textSize="13sp" />


    </RelativeLayout>
</RelativeLayout>
