<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/iniciarsesion">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            />


        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="54dp"
            android:layout_marginTop="332dp"
            android:hint="@string/botontres"
            android:textColorHint="@color/coloruno"
            android:textSize="15sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/editText"
            android:layout_alignTop="@+id/editText"
            android:layout_marginTop="35dp"
            android:hint="@string/botoncuatro"
            android:textColorHint="@color/coloruno"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="70dp"
            android:layout_marginStart="135dp"

            android:text="@string/botoncinco"
            android:textColor="@color/coloruno"
            android:textSize="13sp" />


    </RelativeLayout>

</RelativeLayout>


